:bug: fix intro text not appearing on mobile

--- a/app/routes/home/intro.module.css
+++ b/app/routes/home/intro.module.css
@@ -20,18 +20,6 @@
   @media (--mediaLaptop) {
     max-width: 780px;
   }
-
-  @media (--mediaMobile) {
-    top: calc(var(--space3XL) * -1);
-  }
-
-  @media (--mediaMobileS) {
-    top: calc(var(--spaceXL) * -1);
-  }
-
-  @media (max-width: 820px) and (max-height: 420px) {
-    top: calc(var(--spaceM) * -1);
-  }
 }
 
 .name {
